# Calyxium

./: .gitignore  LICENSE  README.md  calyxium.opam  dune  dune-project  todo.txt
_build/: .db  .digest-db  log
_build/default/: calyxium.dune-package  calyxium.install
_build/default/.dune/: configurator  configurator.v2
_build/default/.ppx/0bb5094b13567c3c4e1ee33245b80e63/: dune__exe___ppx.cmo  dune__exe___ppx.cmx
_build/default/lib/: calyxiumlib.cmxa  calyxiumlib.cmxs
_build/default/lib/.calyxiumlib.objs/byte/: calyxiumlib.cmi  (+2 more)
_build/default/lib/.formatted/: dune
_build/default/lib/.merlin-conf/: lib-calyxiumlib
_build/default/lib/bytecode/: bytecode.cmxa  bytecode.cmxs  bytecode.pp.ml  bytecode.pp.mli
_build/default/lib/repl/: repl.cmxa  repl.cmxs  repl.pp.ml  repl.pp.mli
_build/default/lib/semantics/: semantics.cmxa  semantics.cmxs  semantics.ml-gen  typechecker.pp.ml  typechecker.pp.mli
_build/default/lib/syntax/: ast.pp.ml  ast.pp.mli  lexer.ml  lexer.pp.ml  lexer.pp.mli  parser.conflicts  parser.ml  parser.mli  parser.pp.ml  parser.pp.mli  parser__mock.ml.mock  parser__mock.ml.pp.mock  parser__mock.mli.inferred  syntax.cmxa  syntax.cmxs  syntax.ml-gen
_build/default/lib/vm/: vm.cmxa  vm.cmxs  vm.pp.ml  vm.pp.mli
examples/: calc.cx  clac.cx  fib.cx  hello.cx  import.cx  main.cx  test.cx  test2.cx
lib/: ast.ml  ast.mli  bytecode.ml  bytecode.mli  dune  error.ml  error.mli  help.ml  lexer.mli  lexer.mll  parser.mly  repl.ml  repl.mli  token.ml  token.mli  typechecker.ml  typechecker.mli  version.ml  version.mli  vm.ml  vm.mli
(+50 files in other folders)
